--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-goatcounter": "^4.0.0",
     "docusaurus-plugin-sentry": "^2.1.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
